# Android-Sqlite-Fts5-Tokenizer

./: .gitignore  README.md  gradle.properties
gradle/wrapper/: gradle-wrapper.properties
sqlite3/: build.gradle
sqlite3/src/androidTest/java/org/sqlite/database/: ApplicationTest.java  SeeTest1.java
sqlite3/src/androidTest/java/org/sqlite/database/database_cts/: CursorJoinerTest.java  DatabaseUtilsTest.java
sqlite3/src/androidTest/java/org/sqlite/database/sqlite_cts/: SQLiteOpenHelperTest.java  SQLiteStatementTest.java
sqlite3/src/main/: AndroidManifest.xml
sqlite3/src/main/cpp/: CMakeLists.txt
sqlite3/src/main/cpp/icu_common_59/: CMakeLists.txt
sqlite3/src/main/cpp/icu_compat/: CMakeLists.txt  icucompat.h  icuprototype.h
sqlite3/src/main/cpp/icu_compat/unicode/: alphaindex.h  appendable.h  basictz.h  bms.h  bmsearch.h  brkiter.h  bytestrie.h  bytestriebuilder.h  calendar.h  caniter.h  chariter.h  choicfmt.h  coleitr.h  coll.h  colldata.h  curramt.h  currpinf.h  currunit.h  datefmt.h  dbbi.h  dcfmtsym.h  decimfmt.h  dtfmtsym.h  dtintrv.h  dtitvfmt.h  dtitvinf.h  dtptngen.h  dtrule.h  enumset.h  errorcode.h  fieldpos.h  fmtable.h  format.h  fpositer.h  gender.h  gregocal.h  icudataver.h  icuplug.h  idna.h  listformatter.h  (+111 more)
sqlite3/src/main/cpp/icu_i18n_59/: CMakeLists.txt
sqlite3/src/main/cpp/sqlite3/: CMakeLists.txt  VERSION  android_database_SQLiteConnection.cpp  sqlite3_diff
sqlite3/src/main/cpp/sqlite3/extra/: ascii_tokenizer.c  ascii_tokenizer.h  wcicu_utils.c
sqlite3/src/main/cpp/sqlite_319/: CMakeLists.txt  android_database_SQLiteConnection.cpp  sqlite3_diff  test.cpp  test.h
sqlite3/src/main/cpp/sqlite_319/extra/: wcicu_tokenizer.c  wcicu_tokenizer.h  wcicu_utils.h
sqlite3/src/main/java/org/sqlite/database/: DefaultDatabaseErrorHandler.java
sqlite3/src/main/java/org/sqlite/database/extra/: Enhance.java
sqlite3/src/main/java/org/sqlite/database/sqlite/: CloseGuard.java  SQLiteConnection.java  SQLiteDatabase.java  SQLiteStatement.java
sqlite3test/: build.gradle
sqlite3test/src/main/: AndroidManifest.xml
sqlite3test/src/main/java/org/sqlite/customsqlitetest/: CopyUtil.java  FTS5Activity.java  MainActivity.java
sqlite3test/src/main/java/org/sqlite/customsqlitetest/benchmark/: BenchmarkActivity.java  StringUtil.java
sqlite3test/src/main/res/layout/: activity_benchmark.xml  activity_fts5.xml  activity_main.xml
sqlite3test/src/main/res/values/: strings.xml
www/: index.wiki  install.wiki  see.wiki  usage.wiki
